* Fixed issue where operation following an index filter operation did not
  get executed.

1.9 2019-10-21
~~~~~~~~~~~~~~

* Added operations to filter on dimension indices (e.g. 'index(vertical) < 5').

* Changed bin() and bin_spatial() operations to use/produce separate 'count'
  and 'weight' variables. The counts/weights are used to allow the following
  commands to now be equivalent:
    harpmerge -a 'bin()' -ap 'bin()' a.nc b.nc merged.nc
    harpmerge -ap 'bin()' a.nc b.nc merged.nc
  As well as the following:
    harpmerge -a 'bin_spatial(...)'
      -ap 'squash(time, (latitude_bounds, longitude_bounds));bin()'
      a.nc b.nc merged.nc
    harpmerge -ap 'bin_spatial(...)' a.nc b.nc merged.nc

* Fixed issue with invalid bounding box optimization for spherical area
  filter operations.

* Fixed missing error handling when using invalid operations in
  harp.export_product() in Python.

* Fixed Python3 compatibility issue when exporting string data.

* Updates to ECMWF GRIB, IASI L1/L2, GOME-2 L1/L2, MIPAS L1, and S5P L2
  product ingestions.

1.8 2019-07-31
~~~~~~~~~~~~~~

* Added R interface.

* Improved derivation for tropopause altitude/pressure (to not return NaN).

* Added derivations for gravity.

* Added derivations to convert between total air and dry air mixing ratios.

* Fixed valid() operation to properly use valid_min/valid_max attribute values.

* Fixed issue in adding *_count variable in append/merge when count variable
  had more than one dimension.

* Updates to ECMWF GRIB, GEOMS MWR, and S5P L2 product ingestions.

1.7 2019-06-06
~~~~~~~~~~~~~~

* Added --no-history option to harpconvert, hardump, and harpmerge.

* Added harp.execute_operations() and harp.convert_unit() to Python interface.

* Added optional min_collocation_index/max_collocation_index arguments to
  collocate_left()/collocate_right() operations.

* harp_product_set_history() and harp_product_set_source_product() now accept
  NULL as argument to clear the current value.
